2022-12-08T16:24:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3650130098 # 300
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 98 260 / 105 269
* notice: next accum: outdated-unq outdated-all / unq all: 98 260 / 105 271
* notice: prev exec diff / last date diff / accum: unq all: +0 +2 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2022-12-08]

2022-12-08T08:21:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3646526061 # 299
* notice: last 14d: unq all: 3 9
* notice: prev accum: outdated-unq outdated-all / unq all: 98 260 / 104 268
* notice: next accum: outdated-unq outdated-all / unq all: 98 260 / 105 269
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-12-08]

2022-12-08T01:22:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3644346913 # 298
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 98 260 / 104 268
* notice: next accum: outdated-unq outdated-all / unq all: 98 260 / 104 268
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [] / [2022-11-24 2022-12-07]

2022-12-07T16:23:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3640783970 # 297
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 97 258 / 103 266
* notice: next accum: outdated-unq outdated-all / unq all: 98 260 / 104 268
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2022-11-23] / [2022-12-07]

2022-12-07T08:21:36Z: