@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-08T16:24:12Z",
-  "count_outdated" : 260,
-  "uniques_outdated" : 98,
-  "count" : 271,
+  "timestamp" : "2022-12-09T01:24:13Z",
+  "count_outdated" : 262,
+  "uniques_outdated" : 99,
+  "count" : 273,
   "uniques" : 105,
   "clones" : [
-    {
-      "timestamp": "2022-11-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-25T00:00:00Z",
       "count": 1,
@@ -42,8 +35,8 @@
     },
     {
       "timestamp": "2022-12-08T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
