@@ -1,3 +1,11 @@
+2022-12-09T01:24:13Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3653591793 # 301
+* notice: last 14d: unq all: 3 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 98 260 / 105 271
+* notice: next accum: outdated-unq outdated-all / unq all: 99 262 / 105 273
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +4 -0 -0 / 1 4
+* notice: removed / changed dates: [2022-11-24] / [2022-12-08]
+
 2022-12-08T16:24:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3650130098 # 300
 * notice: last 14d: unq all: 3 11
